--- a/package.json
+++ b/package.json
@@ -13,5 +13,8 @@
     "nuxt": "^3.20.1",
     "vue": "^3.5.25",
     "vue-router": "^4.6.3"
+  },
+  "devDependencies": {
+    "@nuxtjs/tailwindcss": "^6.14.0"
   }
 }
